--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="about-bungle">
 				<div class="for-whom">
 					<div class="medic for-item"></div>
-					<div class="info">
+					<div class="info info1">
 						<div class="about-from about-from1">
 							<h3>Людям с хроническими заболеваниями</h3>
 							<p>Хронические заболевания могут поставить
@@ -112,7 +112,7 @@
 				</div>
 				<div class="for-whom">
 					<div class="old-men for-item"></div>
-					<div class="info">
+					<div class="info info2">
 						<div class="about-from about-from2">
 							<h3>Пожилие люди</h3>
 							<p>С возрастом человек становится все более уязвимым.
@@ -129,7 +129,7 @@
 				</div>
 				<div class="for-whom">
 					<div class="kids for-item"></div>
-					<div class="info">
+					<div class="info info3">
 						<div class="about-from about-from3">
 							<h3>Детям</h3>
 							<p>Мы не можем находиться с детьми 24/7.
@@ -146,7 +146,7 @@
 				</div>
 				<div class="for-whom">
 					<div class="traveler for-item"></div>
-					<div class="info">
+					<div class="info info4">
 						<div class="about-from about-from4">
 							<h3>Путешественникам</h3>
 							<p>Не нужно больше переживать, что вы плохо знаете язык той страны,
@@ -183,5 +183,6 @@
 			<a href="mailto:info@madid.kz">info@madid.kz</a>
 		</div>
 	</footer>
+	<script src = "script/script.js"></script>
 </body>
 </html>
