--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<div class="old-men for-item"></div>
 					<div class="info info2">
 						<div class="about-from about-from2">
-							<h3>Пожилие люди</h3>
+							<h3>Пожилые люди</h3>
 							<p>С возрастом человек становится все более уязвимым.
 								Если вы хоть раз слышали или читали о стариках, которые заблудились,
 								потеряли память и не могут найти свой дом и вспомнить телефоны родных,
